cleaned up code

--- a/code/index.html
+++ b/code/index.html
@@ -4,85 +4,119 @@
     <meta charset="utf-8" />
     <title>Wonderlust</title>
     <link rel="stylesheet" href="./style.css" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com"> 
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
-<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;1,500&display=swap" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;1,500&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
     <header>
-      <img class="logo" src="images/travel-logo.png" alt="Travel logo"/>
+      <img class="logo" src="images/travel-logo.png" alt="Travel logo" />
       <h1>Wonderlust</h1>
       <div class="meny">
-      <div class="menu-line"></div>
-      <div class="menu-line"></div>
-      <div class="menu-line"></div>
-    </div>
+        <div class="menu-line"></div>
+        <div class="menu-line"></div>
+        <div class="menu-line"></div>
+      </div>
+
       <nav>
-       <a class="nav1" href="#">Inspiration</a>
-       <a class="nav2" href="#">Articles</a>
-       <img class="logo-big" src="images/travel-logo.png" alt="Travel logo"/>
-       <a class="nav3" href="#">Subscribe</a>
-       <a class="nav4" href="#">About us</a>
-    </nav>
+        <a class="nav1" href="#">Inspiration</a>
+        <a class="nav2" href="#">Articles</a>
+        <img class="logo-big" src="images/travel-logo.png" alt="Travel logo" />
+        <a class="nav3" href="#">Subscribe</a>
+        <a class="nav4" href="#">About us</a>
       </nav>
     </header>
 
-<div class="wrapper">
-    <section class="big-news">
-      <img class="big-news-image" src="https://images.unsplash.com/photo-1488646953014-85cb44e25828?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2133&q=80" alt="Travel notes on a map"/>
-      <div class="text-container">
-        <h2>Travel the world: Big guide</h2>
-      <p class="small-text">Read more...</p>
-      <p class="more-text">Lorem ipsum dolor amet mustache knausgaard +1, blue bottle waistcoat tbh semiotics artisan synth stumptown gastropub cornhole celiac swag. Brunch raclette vexillologist post-ironic glossier ennui XOXO mlkshk godard pour-over blog tumblr humblebrag. Blue bottle put a bird on it twee prism biodiesel brooklyn. Blue bottle ennui tbh succulents.</p>
-    </div>
-    </section>
+    <div class="wrapper">
+      <section class="big-news">
+        <img
+          class="big-news-image"
+          src="https://images.unsplash.com/photo-1488646953014-85cb44e25828?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2133&q=80"
+          alt="Travel notes on a map"
+        />
+        <div class="text-container">
+          <h2>Travel the world: Big guide</h2>
+          <p class="small-text">Read more...</p>
+          <p class="more-text">
+            Lorem ipsum dolor amet mustache knausgaard +1, blue bottle waistcoat
+            tbh semiotics artisan synth stumptown gastropub cornhole celiac
+            swag. Brunch raclette vexillologist post-ironic glossier ennui XOXO
+            mlkshk godard pour-over blog tumblr humblebrag. Blue bottle put a
+            bird on it twee prism biodiesel brooklyn. Blue bottle ennui tbh
+            succulents.
+          </p>
+        </div>
+      </section>
 
-    <hr>
-<!--card1-->
-    <section class="news-card">
-      <img class="news-card-image" src="https://images.unsplash.com/photo-1533105079780-92b9be482077?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1234&q=80" alt="Blue Greece ocean"/>
-      <h3>Discover Greece on a budget</h3>
-    </section>
-  <!--card2-->
-    <section class="news-card">
-      <img class="news-card-image" src="https://images.unsplash.com/photo-1510265119258-db115b0e8172?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2850&q=80" alt="English countryside"/>
-      <h3>Discover the small roads of London</h3>
-    </section>
-  <!--card3-->
-    <section class="news-card">
-      <img class="news-card-image" src="https://images.unsplash.com/photo-1514970746-d4a465d514d0?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1300&q=80" alt="Train on brigde in snowy mountains"/>
-      <h3>Take the scenic route to Austria</h3>
-    </section>
-  <!--card4-->
-    <section class="news-card">
-      <img class="news-card-image" src="https://images.unsplash.com/photo-1531219432768-9f540ce91ef3?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2850&q=80" alt="orange van by the ocean"/>
-      <h3>The hidden surfspots of Australia</h3>
-    </section>
-  <!--card5-->
-    <section class="news-card">
-      <img class="news-card-image" src="https://images.unsplash.com/photo-1454430690613-c5fbdb397f65?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1288&q=80" alt="phone taking pictures in paris"/>
-      <h3>5 steps to better vaccation photos </h3>
-    </section>
-  <!--card6-->
-    <section class="news-card">
-      <img class="news-card-image" src="https://images.unsplash.com/photo-1494783367193-149034c05e8f?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2850&q=80" alt="Open road in the mountains"/>
-      <h3>Road trip summer! A complete guide</h3>
-    </section>
-    <!--card7-->
-    <section class="news-card">
-      <img class="news-card-image" src="https://images.unsplash.com/photo-1530521954074-e64f6810b32d?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2850&q=80" alt="airport terminal"/>
-      <h3>5 things to do at the airport!</h3>
-    </section>
-  </div>
+      <hr />
+      <!--card1-->
+      <section class="news-card">
+        <img
+          class="news-card-image"
+          src="https://images.unsplash.com/photo-1533105079780-92b9be482077?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1234&q=80"
+          alt="Blue Greece ocean"
+        />
+        <h3>Discover Greece on a budget</h3>
+      </section>
+      <!--card2-->
+      <section class="news-card">
+        <img
+          class="news-card-image"
+          src="https://images.unsplash.com/photo-1510265119258-db115b0e8172?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2850&q=80"
+          alt="English countryside"
+        />
+        <h3>Discover the small roads of London</h3>
+      </section>
+      <!--card3-->
+      <section class="news-card">
+        <img
+          class="news-card-image"
+          src="https://images.unsplash.com/photo-1514970746-d4a465d514d0?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1300&q=80"
+          alt="Train on brigde in snowy mountains"
+        />
+        <h3>Take the scenic route to Austria</h3>
+      </section>
+      <!--card4-->
+      <section class="news-card">
+        <img
+          class="news-card-image"
+          src="https://images.unsplash.com/photo-1531219432768-9f540ce91ef3?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2850&q=80"
+          alt="orange van by the ocean"
+        />
+        <h3>The hidden surfspots of Australia</h3>
+      </section>
+      <!--card5-->
+      <section class="news-card">
+        <img
+          class="news-card-image"
+          src="https://images.unsplash.com/photo-1454430690613-c5fbdb397f65?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1288&q=80"
+          alt="phone taking pictures in paris"
+        />
+        <h3>5 steps to better vaccation photos</h3>
+      </section>
+      <!--card6-->
+      <section class="news-card">
+        <img
+          class="news-card-image"
+          src="https://images.unsplash.com/photo-1494783367193-149034c05e8f?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2850&q=80"
+          alt="Open road in the mountains"
+        />
+        <h3>Road trip summer! A complete guide</h3>
+      </section>
+      <!--card7-->
+      <section class="news-card">
+        <img
+          class="news-card-image"
+          src="https://images.unsplash.com/photo-1530521954074-e64f6810b32d?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2850&q=80"
+          alt="airport terminal"
+        />
+        <h3>5 things to do at the airport!</h3>
+      </section>
+    </div>
   </body>
 </html>
-
-
-<!-- From `0px` to `767px` → **Mobile**
-
-From `768px` to `991px` → **Tablet**
-
-From `992px` to `∞` → **Desktop**
--->
