made some smaller changes based on the feedback i  got

--- a/code/index.html
+++ b/code/index.html
@@ -2,16 +2,15 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Project 2: The News Site</title>
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-
     <!-- Header section -->
     <header class="header">
       <div class="logo-container">
-        <img class="logo-sloth" src="./logo-sloth.png" alt="logo-sloth">
+        <img class="logo-sloth" src="./logo-sloth.png" alt="logo-sloth" />
         <h1 class="sloth-news-title">Sloth News</h1>
       </div>
       <nav class="nav">
@@ -24,57 +23,62 @@
 
     <!-- Big news section -->
     <section class="big-news">
-      <img class="big-news-img" src="./big-news-img.jpg" alt="big-news-sloth">
+      <img class="big-news-img" src="./big-news-img.jpg" alt="big-news-sloth" />
       <article class="big-news-article">
         <h2 class="big-news-title">Latest news:</h2>
-        <p class="big-news-text">10 Incredible Facts About The Sloth</p> 
-        <a class="big-news-link" href="https://slothconservation.org/10-incredible-facts-about-the-sloth/">Read More ></a>
+        <p class="big-news-text">10 Incredible Facts About The Sloth</p>
+        <a
+          class="big-news-link"
+          href="https://slothconservation.org/10-incredible-facts-about-the-sloth/"
+          >Read More ></a
+        >
       </article>
     </section>
 
     <!-- Other news section -->
-    <section class="other-news">
-      <article class="news-card">
-        <img class="news-card-img" src="./sloth-img1.jpg" alt="sloth-img1">
-        <p class="news-text">Lorem ipsum dolor sit amet...</p>
-        <a class="other-news-link" href="#">Read more ></a>
-      </article>
-      <article class="news-card">
-        <img class="news-card-img" src="./sloth-img2.jpg" alt="sloth-img2">
-        <p class="news-text">Lorem ipsum dolor sit amet...</p>
-        <a class="other-news-link" href="#">Read more ></a>
-      </article>
-      <article class="news-card">
-        <img class="news-card-img" src="./sloth-img3.jpg" alt="sloth-img3">
-        <p class="news-text">Lorem ipsum dolor sit amet...</p>
-        <a class="other-news-link" href="#">Read more ></a>
-      </article>
-      <article class="news-card">
-        <img class="news-card-img" src="./sloth-img4.jpg" alt="sloth-img4">
-        <p class="news-text">Lorem ipsum dolor sit amet...</p>
-        <a class="other-news-link" href="#">Read more ></a>
-      </article>
-      <article class="news-card">
-        <img class="news-card-img" src="./sloth-img5.jpg" alt="sloth-img5">
-        <p class="news-text">Lorem ipsum dolor sit amet...</p>
-        <a class="other-news-link" href="#">Read more ></a>
-      </article>
-      <article class="news-card">
-        <img class="news-card-img" src="./sloth-img6.jpg" alt="sloth-img6">
-        <p class="news-text">Lorem ipsum dolor sit amet...</p>
-        <a class="other-news-link" href="#">Read more ></a>
-      </article>
-      <article class="news-card">
-        <img class="news-card-img" src="./sloth-img7.jpg" alt="sloth-img7">
-        <p class="news-text">Lorem ipsum dolor sit amet...</p>
-        <a class="other-news-link" href="#">Read more ></a>
-      </article>
-      <article class="news-card">
-        <img class="news-card-img" src="./sloth-img8.jpg" alt="sloth-img8">
-        <p class="news-text">Lorem ipsum dolor sit amet...</p>
-        <a class="other-news-link" href="#">Read more ></a>
-      </article>
-    </section>
-
+    <div class="other-news-wrapper">
+      <section class="other-news">
+        <article class="news-card">
+          <img class="news-card-img" src="./sloth-img1.jpg" alt="sloth-img1" />
+          <p class="news-text">Lorem ipsum dolor sit amet...</p>
+          <a class="other-news-link" href="#">Read more ></a>
+        </article>
+        <article class="news-card">
+          <img class="news-card-img" src="./sloth-img2.jpg" alt="sloth-img2" />
+          <p class="news-text">Lorem ipsum dolor sit amet...</p>
+          <a class="other-news-link" href="#">Read more ></a>
+        </article>
+        <article class="news-card">
+          <img class="news-card-img" src="./sloth-img3.jpg" alt="sloth-img3" />
+          <p class="news-text">Lorem ipsum dolor sit amet...</p>
+          <a class="other-news-link" href="#">Read more ></a>
+        </article>
+        <article class="news-card">
+          <img class="news-card-img" src="./sloth-img4.jpg" alt="sloth-img4" />
+          <p class="news-text">Lorem ipsum dolor sit amet...</p>
+          <a class="other-news-link" href="#">Read more ></a>
+        </article>
+        <article class="news-card">
+          <img class="news-card-img" src="./sloth-img5.jpg" alt="sloth-img5" />
+          <p class="news-text">Lorem ipsum dolor sit amet...</p>
+          <a class="other-news-link" href="#">Read more ></a>
+        </article>
+        <article class="news-card">
+          <img class="news-card-img" src="./sloth-img6.jpg" alt="sloth-img6" />
+          <p class="news-text">Lorem ipsum dolor sit amet...</p>
+          <a class="other-news-link" href="#">Read more ></a>
+        </article>
+        <article class="news-card">
+          <img class="news-card-img" src="./sloth-img7.jpg" alt="sloth-img7" />
+          <p class="news-text">Lorem ipsum dolor sit amet...</p>
+          <a class="other-news-link" href="#">Read more ></a>
+        </article>
+        <article class="news-card">
+          <img class="news-card-img" src="./sloth-img8.jpg" alt="sloth-img8" />
+          <p class="news-text">Lorem ipsum dolor sit amet...</p>
+          <a class="other-news-link" href="#">Read more ></a>
+        </article>
+      </section>
+    </div>
   </body>
 </html>
