Canged the logo images

--- a/code/index.html
+++ b/code/index.html
@@ -13,7 +13,7 @@
 
     <!-- Logo and Navbar -->
     <header>
-      <img class="logo" src="Katt-logga.png" alt="logga med kattmotiv">
+      <img class="logo" src="./Cat-logo.png" alt="logga med kattmotiv">
       <nav class="nav-bar">
         <a href="https://www.youtube.com/watch?v=k0QhnMJnJE0">Menu</a> 
         <a href="https://en.wikipedia.org/wiki/Cat">About</a>
@@ -39,7 +39,7 @@
 
 
     <!-- The Small news  -->
-    <h1 class="small-news-h1">Heading</h1>
+    <h1 class="small-news-h1">Cat stories of the month</h1>
     <section class="small-news">
       <div class="text-pic">
         <div class="text-pic-content">
@@ -112,7 +112,9 @@
 
    <!-- Footer  -->
   <footer>
-    <img src="instagram-71-227895.png" alt="instagram icon">
+    <img src="./instagramV .png" alt="instagram icon">
     <img src="facebook-3017395-2508544.png" alt="facebook icon">
+    <img src="./linkedinV.png" alt="linkedin icon">
+    <img src="./twitterV .png" alt="twitter icon">
   </footer>
 </html>
