fixing small design stuff

--- a/code/index.html
+++ b/code/index.html
@@ -44,7 +44,7 @@
       <div class="text-pic">
         <div class="text-pic-content">
           <h2>Story</h2>
-          <img class="small-news-pic" src="https://upload.wikimedia.org/wikipedia/commons/1/11/Mihail_Manolov_-_Little_Kitten_%28by-sa%29.jpg" alt="cute kitten">
+          <img class="small-news-pic" src="./pics/nedladdning.jpeg" alt="cute kitten">
           <p class="grid-1">Cat ipsum dolor sit amet, loved it, hated it, loved it, hated it pushes butt to face. Litter kitter kitty litty little kitten big roar roar feed me love blinks and purr purr purr purr yawn for walk on keyboard i can haz hide head under blanket so no one can see.</p>
         </div>  
       </div> 
@@ -52,7 +52,7 @@
       <div class="text-pic">
         <div class="text-pic-content">
           <h2>Story</h2>
-          <img class="small-news-pic" src="https://upload.wikimedia.org/wikipedia/commons/1/11/Mihail_Manolov_-_Little_Kitten_%28by-sa%29.jpg" alt="cute kitten">
+          <img class="small-news-pic" src="./pics/nedladdning (1).jpeg" alt="cute kitten">
           <p class="grid-2">Cat ipsum dolor sit amet, loved it, hated it, loved it, hated it pushes butt to face. Litter kitter kitty litty little kitten big roar roar feed me love blinks and purr purr purr purr yawn for walk on keyboard i can haz hide head under blanket so no one can see.</p>
           </div>
         </div>  
@@ -60,7 +60,7 @@
       <div class="text-pic">
         <div class="text-pic-content">
           <h2>Story</h2>
-          <img class="small-news-pic" src="https://upload.wikimedia.org/wikipedia/commons/1/11/Mihail_Manolov_-_Little_Kitten_%28by-sa%29.jpg" alt="cute kitten">
+          <img class="small-news-pic" src="./pics/nedladdning (2).jpeg" alt="cute kitten">
           <p class="grid-3">Cat ipsum dolor sit amet, loved it, hated it, loved it, hated it pushes butt to face. Litter kitter kitty litty little kitten big roar roar feed me love blinks and purr purr purr purr yawn for walk on keyboard i can haz hide head under blanket so no one can see.</p>
           </div>
         </div> 
@@ -68,7 +68,7 @@
       <div class="text-pic">
         <div class="text-pic-content">
           <h2>Story</h2>
-          <img class="small-news-pic" src="https://upload.wikimedia.org/wikipedia/commons/1/11/Mihail_Manolov_-_Little_Kitten_%28by-sa%29.jpg" alt="cute kitten">
+          <img class="small-news-pic" src="./pics/nedladdning (3).jpeg" alt="cute kitten">
           <p class="grid-4">Cat ipsum dolor sit amet, loved it, hated it, loved it, hated it pushes butt to face. Litter kitter kitty litty little kitten big roar roar feed me love blinks and purr purr purr purr yawn for walk on keyboard i can haz hide head under blanket so no one can see.</p>
           </div>
         </div>
@@ -76,7 +76,7 @@
       <div class="text-pic">
         <div class="text-pic-content">
           <h2>Story</h2>
-          <img class="small-news-pic" src="https://upload.wikimedia.org/wikipedia/commons/1/11/Mihail_Manolov_-_Little_Kitten_%28by-sa%29.jpg" alt="cute kitten">
+          <img class="small-news-pic" src="./pics/nedladdning (4).jpeg" alt="cute kitten">
           <p class="grid-5">Cat ipsum dolor sit amet, loved it, hated it, loved it, hated it pushes butt to face. Litter kitter kitty litty little kitten big roar roar feed me love blinks and purr purr purr purr yawn for walk on keyboard i can haz hide head under blanket so no one can see.</p>
         </div>
       </div>  
@@ -84,15 +84,15 @@
       <div class="text-pic">
         <div class="text-pic-content">
           <h2>Story</h2>
-          <img class="small-news-pic" src="https://upload.wikimedia.org/wikipedia/commons/1/11/Mihail_Manolov_-_Little_Kitten_%28by-sa%29.jpg" alt="cute kitten">
-          <p class="grid-6">Cat ipsum dolor sit amet, loved it, hated it, loved it, hated it pushes butt to face. Litter kitter kitty litty little kitten big roar roar feed me love blinks and purr purr purr purr yawn for walk on keyboard i can haz hide head under blanket so no one can see.</p>
+          <img class="small-news-pic" src="./pics/images.jpeg" alt="cute kitten">
+          <p class="grid-6">Cat ipsum dolor sit amet, loved it, hated it, loved it, hated it pushes butt to face. Litter kitter kitty litty little kitten big roar roar feed me love blinks and purr purr purr purr yawn for walk on keyboard i can haz hide head under blanket so no one can see. Cat ipsum dolor sit amet, loved it, hated it, loved it, hated it pushes butt to face. Litter kitter kitty litty little kitten big roar roar feed me love blinks and purr purr purr purr yawn for walk on keyboard i can haz hide head under blanket so no one can see.</p>
         </div>
       </div> 
 
       <div class="text-pic">
         <div class="text-pic-content">
           <h2>Story</h2>
-          <img class="small-news-pic" src="https://upload.wikimedia.org/wikipedia/commons/1/11/Mihail_Manolov_-_Little_Kitten_%28by-sa%29.jpg" alt="cute kitten">
+          <img class="small-news-pic" src="./pics/images (1).jpeg" alt="cute kitten">
           <p class="grid-7">Cat ipsum dolor sit amet, loved it, hated it, loved it, hated it pushes butt to face. Litter kitter kitty litty little kitten big roar roar feed me love blinks and purr purr purr purr yawn for walk on keyboard i can haz hide head under blanket so no one can see.</p>
         </div>
       </div>   
@@ -100,7 +100,7 @@
       <div class="text-pic">
         <div class="text-pic-content">
           <h2>Story</h2>
-          <img class="small-news-pic" src="https://upload.wikimedia.org/wikipedia/commons/1/11/Mihail_Manolov_-_Little_Kitten_%28by-sa%29.jpg" alt="cute kitten">
+          <img class="small-news-pic" src="./pics/images (2).jpeg" alt="cute kitten">
           <p class="grid-8">Cat ipsum dolor sit amet, loved it, hated it, loved it, hated it pushes butt to face. Litter kitter kitty litty little kitten big roar roar feed me love blinks and purr purr purr purr yawn for walk on keyboard i can haz hide head under blanket so no one can see.</p>
         </div>
       </div>   
