fix broken image

--- a/code/index.html
+++ b/code/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>News Magazine</title>
     <link rel="stylesheet" href="./style.css" />
-    <link rel="icon" href="/assets/news.png" />
+    <link rel="icon" href="./assets/news.png" />
     <!--favicon-->
     <!--fonts from Google-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -21,13 +21,13 @@
     <nav class="top-bar" id="top">
       <section class="top-bar left">
         <div class="logo">
-          <img src="/assets/news.png" alt="news icon" width="30" height="30" />
+          <img src="./assets/news.png" alt="news icon" width="30" height="30" />
         </div>
 
         <div class="search">
           <a href="https://www.google.com">
             <img
-              src="/assets/search.png"
+              src="./assets/search.png"
               alt="search icon"
               width="30"
               height="30"
@@ -48,7 +48,7 @@
           <!-- target ="blank" -> new tab-->
           <div class="social-media-icon">
             <img
-              src="/assets/facebook.png"
+              src="./assets/facebook.png"
               alt="facebook icon"
               width="20"
               height="20"
@@ -58,7 +58,7 @@
         <a href="https://www.instagram.com" target="blank">
           <div class="social-media-icon">
             <img
-              src="/assets/instagram.png"
+              src="./assets/instagram.png"
               alt="instagram icon"
               width="20"
               height="20"
@@ -68,7 +68,7 @@
         <a href="https://www.twitter.com" target="blank">
           <div class="social-media-icon">
             <img
-              src="/assets/twitter.png"
+              src="./assets/twitter.png"
               alt="twitter icon"
               width="20"
               height="20"
@@ -125,7 +125,7 @@
     <!--first news row with one picture and some text-->
     <article class="all-news">
       <div class="big-news">
-        <img src="/assets/corona.jpg" alt="image of coronavirus" />
+        <img src="./assets/corona.jpg" alt="image of coronavirus" />
       </div>
       <div class="big-news" id="health">
         <!--put an id so we can target it from navbar-->
@@ -144,13 +144,13 @@
     <!--other all-news with seven news card, each of them is put in to a div called other-news-->
     <article class="all-news">
       <div class="other-news">
-        <img src="/assets/hospital.jpg" alt="image of a hospital" />
+        <img src="./assets/hospital.jpg" alt="image of a hospital" />
         <h3>Health</h3>
         <h2>News Magazine's Health Systems declare state of emergency</h2>
         <h3>Hospital director...</h3>
       </div>
       <div class="other-news" id="tech">
-        <img src="/assets/robot.jpg" alt="image of robots on the moon" />
+        <img src="./assets/robot.jpg" alt="image of robots on the moon" />
         <h3>
           <span class="target-highlight">Tech</span>
         </h3>
@@ -158,13 +158,13 @@
         <h3>Elon Musk...</h3>
       </div>
       <div class="other-news">
-        <img src="/assets/tech-news.jpg" alt="image of the word Tech News" />
+        <img src="./assets/tech-news.jpg" alt="image of the word Tech News" />
         <h3>Tech</h3>
         <h2>Today Tech news updates</h2>
         <h3>See our daily Tech news updates...</h3>
       </div>
       <div class="other-news" id="business">
-        <img src="/assets/cryptocurrency.jpg" alt="image of cryptocurrency" />
+        <img src="./assets/cryptocurrency.jpg" alt="image of cryptocurrency" />
         <h3>
           <span class="target-highlight">Business</span>
         </h3>
@@ -174,7 +174,7 @@
         </h3>
       </div>
       <div class="other-news">
-        <img src="/assets/ikea.jpg" alt="image of an Ikea store" />
+        <img src="./assets/ikea.jpg" alt="image of an Ikea store" />
         <h3>Business</h3>
         <h2>
           IKEA attempts to draw in more consumers with their new business
@@ -183,7 +183,7 @@
         <h3>The CEO of Ikea Group ...</h3>
       </div>
       <div class="other-news" id="sports">
-        <img src="/assets/tokyo.jpg" alt="image of the word Tokyo" />
+        <img src="./assets/tokyo.jpg" alt="image of the word Tokyo" />
         <h3>
           <span class="target-highlight">Sports</span>
         </h3>
@@ -191,7 +191,7 @@
         <h3>See the best moments of Olympics Games 2020...</h3>
       </div>
       <div class="other-news">
-        <img src="/assets/sports.png" alt="image of athletes" />
+        <img src="./assets/sports.png" alt="image of athletes" />
         <h3>Sports</h3>
         <h2>This week's biggest sports news</h2>
         <h3>What you need to know...</h3>
@@ -199,7 +199,7 @@
     </article>
 
     <footer id="bottom">
-      <!--put an id so we can target it från top-bar, "contact us"-->
+      <!--put an id so we can target it from top-bar, "contact us"-->
       <div class="contact-info">
         <p>News Magazine</p>
         <p>Address Street 123</p>
@@ -215,7 +215,7 @@
         <a href="https://www.technigo.io/" target="blank">
           <p>
             <img
-              src="/assets/logo.svg"
+              src="./assets/logo.svg"
               class="logo-technigo"
               alt="logo of Technigo"
             />
