fixing design for different screen sizes

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <!-- Some kind of logo and navbar -->
-  <header>
+  <header class="header">
     <div class="logo">
       <img class="logo-img" src="./images/logo-n.svg" alt="logo" />
       <h1>Tech News</h1>
@@ -58,95 +58,110 @@
 
   <!-- The other news  -->
   <section class="small-news">
+    <section class="first-line">
+      <section class="first-line-a">
+        <div class="small-square">
+          <a href="https://gadgets.ndtv.com/audio/news/oneplus-buds-pro-price-in-india-rs-9990-release-sale-date-august-26-specifications-features-2516888"
+            target="_blank">
+            <div class="small-img-container">
+              <img class="small-img" src="./images/oneplus-buds.jpeg" alt="headphones">
+            </div>
+            <div class="small-text">
+              <h2>Audio</h2>
+              <h3>OnePlus Buds Pro Price in India Announced, Go on Sale on August 26</h3>
+            </div>
+          </a>
+        </div>
 
-    <div class="small-square">
-      <a href="https://gadgets.ndtv.com/audio/news/oneplus-buds-pro-price-in-india-rs-9990-release-sale-date-august-26-specifications-features-2516888"
-        target="_blank">
-        <div class="small-img-container">
-          <img class="small-img" src="./images/oneplus-buds.jpeg" alt="headphones">
-        </div>
-        <div class="small-text">
-          <h2>Audio</h2>
-          <h3>OnePlus Buds Pro Price in India Announced, Go on Sale on August 26</h3>
-        </div>
-      </a>
-    </div>
 
+        <div class="small-square">
 
-    <div class="small-square">
-      <a href="https://www.cnet.com/pictures/google-pixel-5a-with-5g-refines-the-budget-android-phone/" target="_blank">
-        <div class="small-img-container">
-          <img class="small-img" src="./images/google-pixel-5.jpeg" alt="android phone">
+          <a href="https://www.cnet.com/pictures/google-pixel-5a-with-5g-refines-the-budget-android-phone/"
+            target="_blank">
+            <div class="small-img-container">
+              <img class="small-img" src="./images/google-pixel-5.jpeg" alt="android phone">
+            </div>
+            <div class="small-text">
+              <h2>Mobile</h2>
+              <h3>Google Pixel 5A with 5G refines the budget Android phone</h3>
+            </div>
+          </a>
         </div>
-        <div class="small-text">
-          <h2>Mobile</h2>
-          <h3>Google Pixel 5A with 5G refines the budget Android phone</h3>
-        </div>
-      </a>
-    </div>
+      </section>
 
-    <div class="small-square">
-      <a href="https://www.bbc.com/news/business-58277359" target="_blank">
-        <div class="small-img-container">
-          <img class="small-img" src="./images/hakers-japan.jpeg" alt="hakers in Japan">
+      <section class="first-line-b">
+        <div class="small-square">
+          <a href="https://www.bbc.com/news/business-58277359" target="_blank">
+            <div class="small-img-container">
+              <img class="small-img" src="./images/hakers-japan.jpeg" alt="hakers in Japan">
+            </div>
+            <div class="small-text">
+              <h2>Businness</h2>
+              <h3>Hackers steal nearly $100m in Japan crypto heist</h3>
+            </div>
+          </a>
         </div>
-        <div class="small-text">
-          <h2>Businness</h2>
-          <h3>Hackers steal nearly $100m in Japan crypto heist</h3>
-        </div>
-      </a>
-    </div>
 
-    <div class="small-square">
-      <a href="https://www.bbc.com/news/business-57983174" target="_blank">
-        <div class="small-img-container">
-          <img class="small-img" src="./images/jumbo-jet.jpeg" alt="jumbo jet">
+        <div class="small-square">
+          <a href="https://www.bbc.com/news/business-57983174" target="_blank">
+            <div class="small-img-container">
+              <img class="small-img" src="./images/jumbo-jet.jpeg" alt="jumbo jet">
+            </div>
+            <div class="small-text">
+              <h2>Environment</h2>
+              <h3>Just how hard is it to recycle a jumbo jet?</h3>
+            </div>
+          </a>
         </div>
-        <div class="small-text">
-          <h2>Environment</h2>
-          <h3>Just how hard is it to recycle a jumbo jet?</h3>
-        </div>
-      </a>
-    </div>
+      </section>
+    </section>
 
-    <div class="small-square">
-      <a href="https://www.thelocal.se/20210615/its-a-democratic-tool-the-site-that-helps-you-find-a-covid-vaccine-slot-in-sweden/
+    <section class="second-line">
+      <section class="second-line-a">
+
+        <div class="small-square">
+          <a href="https://www.thelocal.se/20210615/its-a-democratic-tool-the-site-that-helps-you-find-a-covid-vaccine-slot-in-sweden/
                 target=" _blank">
-        <div class="small-img-container">
-          <img class="small-img" src="./images/covid.jpeg" alt="covid vaccinne">
+            <div class="small-img-container">
+              <img class="small-img" src="./images/covid.jpeg" alt="covid vaccinne">
+            </div>
+            <div class="small-text">
+              <h2>Covid</h2>
+              <h3>‘It’s a democratic tool’: The site that helps you find a Covid vaccine slot in Sweden</h3>
+            </div>
+          </a>
         </div>
-        <div class="small-text">
-          <h2>Covid</h2>
-          <h3>‘It’s a democratic tool’: The site that helps you find a Covid vaccine slot in Sweden</h3>
-        </div>
-      </a>
-    </div>
 
-    <div class="small-square">
-      <a href="https://www.newscientist.com/article/2287792-tesla-is-building-an-ai-humanoid-robot-called-optimus-says-elon-musk/"
-        target="_blank">
-        <div class="small-img-container">
-          <img class="small-img" src="./images/robot-humanoid.png" alt="robot humanoid">
+        <div class="small-square">
+          <a href="https://www.newscientist.com/article/2287792-tesla-is-building-an-ai-humanoid-robot-called-optimus-says-elon-musk/"
+            target="_blank">
+            <div class="small-img-container">
+              <img class="small-img" src="./images/robot-humanoid.png" alt="robot humanoid">
+            </div>
+            <div class="small-text">
+              <h2>Robot</h2>
+              <h3>Tesla is building an AI humanoid robot called Optimus, says Elon Musk</h3>
+            </div>
+          </a>
         </div>
-        <div class="small-text">
-          <h2>Robot</h2>
-          <h3>Tesla is building an AI humanoid robot called Optimus, says Elon Musk</h3>
-        </div>
-      </a>
-    </div>
+      </section>
 
-    <div class="small-square">
-      <a href="https://www.computerworld.com/article/3630408/facebook-promises-immersive-vr-meetings-with-horizon-workrooms.html"
-        target="_blank">
-        <div class="small-img-container">
-          <img class="small-img" src="./images/facebook-horizon-workrooms.jpeg" alt="horizontal workrooms">
+      <section class="second-line-b">
+        <div class="small-square">
+          <a href="https://www.computerworld.com/article/3630408/facebook-promises-immersive-vr-meetings-with-horizon-workrooms.html"
+            target="_blank">
+            <div class="small-img-container">
+              <img class="small-img" src="./images/facebook-horizon-workrooms.jpeg" alt="horizontal workrooms">
+            </div>
+            <div class="small-text">
+              <h2>Virtual Reality</h2>
+              <h3>Facebook promises immersive VR meetings with Horizon Workrooms</h3>
+            </div>
+          </a>
         </div>
-        <div class="small-text">
-          <h2>Virtual Reality</h2>
-          <h3>Facebook promises immersive VR meetings with Horizon Workrooms</h3>
-        </div>
-      </a>
-    </div>
+      </section>
+
+    </section>
   </section>
 
   <!-- animation -->
@@ -189,7 +204,7 @@
   </section>
 
 
-  <footer>
+  <footer class="footer">
     <a href="mailto: techNews@example.com" target="_blank" alt="email">
       <p>Contact us</p>
     </a>
